--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "axios": "^0.19.2",
     "bulma": "^0.9.0",
     "leaflet": "^1.6.0",
+    "moment": "^2.27.0",
+    "moment-timezone": "^0.5.31",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-geolocated": "^3.0.1",
     "react-leaflet": "^2.7.0",
+    "react-moment": "^0.9.7",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
