--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "bulma": "^0.9.0",
+    "gh-pages": "^3.1.0",
     "leaflet": "^1.6.0",
     "moment": "^2.27.0",
     "moment-timezone": "^0.5.31",
